Update basic.css reduced min width to 10em to prevent wordspill

--- a/basic.css
+++ b/basic.css
@@ -50,7 +50,7 @@ p{
 	ideal line length is between 45-75 characters per line
 	1em ~= 2ch, so the ideal range is between 23em -- 38em*/
 	max-width: 38em;
-	min-width: 25em;
+	min-width: 10em;
 	
 	margin: auto;
 	
